# ClawLoops

./: .gitignore  ARCHITECTURE.md  README.md  README.zh-CN.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
apps/clawloops-web/: Dockerfile
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/v1/: admin.py  auth.py  runtime.py  users.py
backend/app/core/: auth.py  dependencies.py  errors.py  settings.py
backend/app/schemas/: runtime.py
backend/tests/: conftest.py  test_contracts_runtime_binding.py  test_healthcheck.py
backend/tests/api/: test_admin_module5.py  test_admin_smoke_governance.py  test_auth.py  test_disabled_user_access.py  test_module1_to_module2_integration.py  test_module6_full_smoke_flow.py  test_runtime_status_api.py  test_workspace_entry_api.py
contracts/baseline-v0.11/: BASELINE.md  api-boundary.json  enums.json  errors.json  invitation.schema.json
contracts/baseline-v0.2/: BASELINE.md  user_runtime_binding.schema.json
contracts/baseline-v0.3/: BASELINE.md  user_runtime_binding.schema.json
contracts/baseline-v0.8/: BASELINE.md  api-boundary.json  enums.json  errors.json  user_runtime_binding.schema.json
infra/authentik/: AUTHENTIK_Group_Mapping.zh-CN.md  AUTHENTIK_SETUP.zh-CN.md  README.md
infra/compose/: .env  .env.cn.example  .env.example  E2E_Admin_User_OpenClaw.md  docker-compose.yml  litellm.config.yaml
infra/traefik/dynamic/: middlewares.yml
oneclick/: README.md  start-crewclaw.sh
scripts/: e2e_admin_user_openclaw.sh
services/runtime-manager/: Dockerfile  README.md  pyproject.toml
(+33 files in other folders)
